--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -100,8 +100,10 @@ bind -r L resize-pane -R 2
 # window navigation
 unbind n
 unbind p
-bind -r C-h previous-window # select previous window
-bind -r C-l next-window     # select next window
+#bind -r C-h previous-window # select previous window
+#bind -r C-l next-window     # select next window
+bind -r C-n previous-window # select previous window
+bind -r C-p next-window     # select next window
 bind Tab last-window        # move to last active window
 
 # toggle mouse
