--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -72,9 +72,13 @@ bind C-c new-session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
 # split current window horizontally
-bind - split-window -v
+bind v split-window -v
 # split current window vertically
-bind _ split-window -h
+bind V split-window -h
+
+# pane movement
+bind-key - command-prompt -p "join pane from: [#i]#W"  "join-pane -s '%%'"
+bind-key + command-prompt -p "send pane to:"  "join-pane -t '%%'"
 
 # pane navigation
 #bind -r h select-pane -L  # move left
