--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -77,8 +77,8 @@ bind v split-window -v
 bind V split-window -h
 
 # pane movement
-bind-key - command-prompt -p "join pane from: [#i]#W"  "join-pane -s '%%'"
-bind-key + command-prompt -p "send pane to:"  "join-pane -t '%%'"
+bind-key + command-prompt -p "join pane from: [#I]#W"  "join-pane -h -s '%%'"
+bind-key - command-prompt -p "send pane to:"  "join-pane -h -t '%%'"
 
 # pane navigation
 #bind -r h select-pane -L  # move left
