--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule ".vim/bundle/ale"]
 	path = .vim/bundle/ale
 	url = https://github.com/w0rp/ale.git
+[submodule ".vim/bundle/git-blame.vim"]
+	path = .vim/bundle/git-blame.vim
+	url = https://github.com/zivyangll/git-blame.vim.git
