--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,5 @@
 	lg2 = log --graph --oneline --decorate=full --date=short --format=\"%C(yellow)%h%C(reset) %C(magenta)[%G?]%C(reset) %C(blue)[%ad]%C(reset)%C(auto)%d%C(reset) %s %C(cyan)@%an%C(reset)\"
 [commit]
 	gpgsign = true
+[core]
+	excludesfile = ~/dotfiles/.mygitignore
