gitconfig update email. update zsh

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = tanapol@qbit-robotics.jp
+	email = tanapol.pr@gmail.com
 	name = Tanapol Prucksakorn
 	signingkey = A551A9EA656343CF
 [diff]
