add another -i to xsel seems to fix the copy problem?

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -155,7 +155,7 @@ run -b 'tmux bind -t vi-copy C-v rectangle-toggle 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi C-v send -X rectangle-toggle 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy y copy-selection 2> /dev/null || true'
 #run -b 'tmux bind -T copy-mode-vi y send -X copy-selection-and-cancel 2> /dev/null || true'
-run -b 'tmux bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xsel -i -b" 2> /dev/null || true'
+run -b 'tmux bind -T copy-mode-vi y send -X copy-pipe-and-cancel "xsel -i -i -b" 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy Escape cancel 2> /dev/null || true'
 run -b 'tmux bind -T copy-mode-vi Escape send -X cancel 2> /dev/null || true'
 run -b 'tmux bind -t vi-copy H start-of-line 2> /dev/null || true'
