C-d for switching session

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -109,6 +109,7 @@ unbind p
 bind -r C-n previous-window # select previous window
 bind -r C-p next-window     # select next window
 bind Tab last-window        # move to last active window
+bind C-d switch-client -l
 
 # toggle mouse
 bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
