remove vim resurrect, change switch session to C-q

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -109,7 +109,7 @@ unbind p
 bind -r C-n previous-window # select previous window
 bind -r C-p next-window     # select next window
 bind Tab last-window        # move to last active window
-bind C-d switch-client -l
+bind C-q switch-client -l # switch last session
 
 # toggle mouse
 bind m run "cut -c3- ~/.tmux.conf | sh -s _toggle_mouse"
@@ -182,7 +182,7 @@ bind p paste-buffer  # paste from the top paste buffer
 bind P choose-buffer # choose which buffer to paste from
 
 
-set -g @resurrect-strategy-vim 'session'
+# set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 run-shell $HOME/dotfiles/.tmux/tmux-resurrect/resurrect.tmux
 # -- user defined overrides ----------------------------------------------------
