--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -34,7 +34,7 @@ bind r source-file ~/.tmux.conf \; display '~/.tmux.conf sourced'
 
 
 # -- display -------------------------------------------------------------------
-
+set -g focus-events on
 set -g base-index 1           # start windows numbering at 1
 setw -g pane-base-index 1     # make pane numbering consistent with windows
 
