--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -69,6 +69,9 @@ bind-key d run-shell "#{@resurrect-save-script-path} quiet" \; detach-client
 # create session
 bind C-c new-session
 
+# new window at home dir
+bind c new-window -c "$HOME"
+
 # find session
 bind C-f command-prompt -p find-session 'switch-client -t %%'
 
