fix tmux ctrl-k duplicate with vim. make YCM open new tab for goto

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -51,7 +51,7 @@ set -g status-interval 10     # redraw status line every 10 seconds
 
 # clear both screen and history
 # bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
-bind -n C-k clear-history
+bind C-k clear-history
 
 # activity
 set -g monitor-activity on
