--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -58,6 +58,7 @@ set -g monitor-activity on
 set -g visual-activity off
 
 set-window-option -g mode-keys vi
+unbind -T copy-mode-vi MouseDragEnd1Pane
 set -g pane-border-status top
 set -g pane-border-format "#P: #{pane_current_command} #{pane_current_path}"
 
