--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "python3",
+    "python.pythonPath": "/usr/bin/python3",
     "python.linting.enabled": false,
     "coc.preferences.jumpCommand": "tab drop"
 }
