add move window in tmux

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -96,6 +96,8 @@ bind k select-pane -U  # move up
 bind l select-pane -R  # move right
 bind > swap-pane -D       # swap current pane with the next one
 bind < swap-pane -U       # swap current pane with the previous one
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
 
 # maximize current pane
 #bind + run 'cut -c3- ~/.tmux.conf | sh -s _maximize_pane "#{session_name}" #D'
