--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,5 +1,10 @@
 {
     "python.pythonPath": "/usr/bin/python3",
     "python.linting.enabled": false,
-    "coc.preferences.jumpCommand": "tab drop"
+    "coc.preferences.jumpCommand": "tab drop",
+
+    "rust-analyzer.checkOnSave.enable": true,
+    "rust-analyzer.completion.addCallParenthesis": true,
+    "rust-analyzer.completion.addCallArgumentSnippets": true,
+    "rust-analyzer.procMacro.enable": true
 }
