--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -6,5 +6,6 @@
     "rust-analyzer.checkOnSave.enable": true,
     "rust-analyzer.completion.addCallParenthesis": true,
     "rust-analyzer.completion.addCallArgumentSnippets": true,
-    "rust-analyzer.procMacro.enable": true
+    "rust-analyzer.procMacro.enable": true,
+    "rust-analyzer.cargo.allFeatures": true
 }
