disable save on detach

--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -65,7 +65,7 @@ set -g pane-border-format "#P: #{pane_current_command} #{pane_current_path}"
 
 # -- navigation ----------------------------------------------------------------
 # save on detach
-bind-key d run-shell "#{@resurrect-save-script-path} quiet" \; detach-client
+# bind-key d run-shell "#{@resurrect-save-script-path} quiet" \; detach-client
 
 # create session
 bind C-c new-session
