--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -7,5 +7,8 @@
     "rust-analyzer.completion.addCallParenthesis": true,
     "rust-analyzer.completion.addCallArgumentSnippets": true,
     "rust-analyzer.procMacro.enable": true,
-    "rust-analyzer.cargo.allFeatures": true
+    "rust-analyzer.cargo.allFeatures": true,
+    "rust-analyzer.checkOnSave.extraArgs": [
+      "--target-dir", "/tmp/rust-analyzer-check"
+    ]
 }
