--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -10,6 +10,7 @@
 # -- general -------------------------------------------------------------------
 
 set -g default-terminal "screen-256color" # colors!
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-shell /bin/zsh
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
