--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -17,6 +17,8 @@ set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
 set -s focus-events on
 
+set -g mouse on
+
 #set -g prefix2 C-\                        # GNU-Screen compatible prefix
 #bind C-\ send-prefix -2
 set -g prefix2 C-a                        # GNU-Screen compatible prefix
