--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 [submodule "vim-plug"]
 	path = vim-plug
 	url = https://github.com/junegunn/vim-plug
+[submodule "nvim/autoload/vim-plug"]
+	path = nvim/autoload/vim-plug
+	url = https://github.com/junegunn/vim-plug
