--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -15,7 +15,6 @@ set-option -g default-shell /bin/zsh
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
-set -s focus-events on
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
@@ -195,7 +194,7 @@ bind P choose-buffer # choose which buffer to paste from
 
 
 # set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-capture-pane-contents 'on'
+# set -g @resurrect-capture-pane-contents 'on'
 run-shell $HOME/dotfiles/.tmux/tmux-resurrect/resurrect.tmux
 # -- user defined overrides ----------------------------------------------------
 
