--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -195,7 +195,7 @@ bind P choose-buffer # choose which buffer to paste from
 
 # set -g @resurrect-strategy-vim 'session'
 # set -g @resurrect-capture-pane-contents 'on'
-run-shell $HOME/dotfiles/.tmux/tmux-resurrect/resurrect.tmux
+# run-shell $HOME/dotfiles/.tmux/tmux-resurrect/resurrect.tmux
 # -- user defined overrides ----------------------------------------------------
 
 if '[ -f ~/.tmux.conf.local ]' 'source ~/.tmux.conf.local'
