--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -11,7 +11,7 @@
 
 set -g default-terminal "screen-256color" # colors!
 set-option -ga terminal-overrides ",xterm-256color:Tc"
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/fish
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
 set -sg repeat-time 600                   # increase repeat timeout
