--- a/.gitconfig
+++ b/.gitconfig
@@ -2,17 +2,19 @@
     email = tanapol.pr@gmail.com
     name = Tanapol Prucksakorn
     signingkey = E10770F0BA34F84FDFA8F2727EA163BFEC316740
+
 [diff]
     tool = vimdiff
+
 [difftool]
     prompt = false
 
-[alias]
-    lg = log --graph --oneline --decorate=full -20 --date=short --format=\"%C(yellow)%h%C(reset) %C(magenta)[%G?]%C(reset) %C(blue)[%ad]%C(reset)%C(auto)%d%C(reset) %s %C(cyan)@%an%C(reset)\"
-    lg2 = log --graph --oneline --decorate=full --date=short --format=\"%C(yellow)%h%C(reset) %C(magenta)[%G?]%C(reset) %C(blue)[%ad]%C(reset)%C(auto)%d%C(reset) %s %C(cyan)@%an%C(reset)\"
 [commit]
     gpgsign = true
+
 [core]
     excludesfile = ~/dotfiles/.mygitignore
+    pager = less -+FX -r
+
 [pull]
     rebase = false
