--- a/starship.toml
+++ b/starship.toml
@@ -11,7 +11,7 @@ threshold = 30
 style = "bold red"
 
 [character]
-error_symbol = "[✖](bold red) "
+error_symbol = '[✗](bold red) '
 
 [cmd_duration]
 min_time = 10_000  # Show command duration over 10,000 milliseconds (=10 sec)
