--- a/starship.toml
+++ b/starship.toml
@@ -38,8 +38,8 @@ style = "bold fg:230"
 [git_status]
 format = '([\[$all_status$ahead_behind\]]($style) )'
 conflicted = "🏳 "
-ahead = "⇡${count} "
-behind = "⇣${count} "
+ahead = "🚀×${count} "
+behind = "🐢×${count} "
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
 untracked = "×${count} "
 stashed = "📦×"
