--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -9,7 +9,7 @@
 
 # -- general -------------------------------------------------------------------
 
-set -g default-terminal "screen-256color" # colors!
+set -g default-terminal "xterm-256color" # colors!
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-shell /bin/fish
 setw -g xterm-keys on
