--- a/starship.toml
+++ b/starship.toml
@@ -132,7 +132,7 @@ ahead = "🚀×${count} "
 behind = "🐢×${count} "
 diverged = '⇕⇡${ahead_count}⇣${behind_count}'
 untracked = "×${count} "
-stashed = "📦×"
+stashed = "📦×${count} "
 modified = "📝×${count} "
 staged = " ×${count} "
 renamed = " ×${count} "
