--- a/.tmux/.tmux.conf
+++ b/.tmux/.tmux.conf
@@ -19,6 +19,7 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 set -g mouse on
+set -s set-clipboard on
 
 #set -g prefix2 C-\                        # GNU-Screen compatible prefix
 #bind C-\ send-prefix -2
