--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1292,7 +1292,7 @@ cursor_shape block
 
 #: Advanced {{{
 
-shell /opt/homebrew/bin/fish
+# shell /opt/homebrew/bin/fish
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
