--- a/.gitconfig
+++ b/.gitconfig
@@ -18,8 +18,12 @@
 
 [pull]
     rebase = false
+
 [filter "lfs"]
     clean = git-lfs clean -- %f
     smudge = git-lfs smudge -- %f
     process = git-lfs filter-process
     required = true
+
+[include]
+    path = ~/.gitconfig-work
