--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
 # git config core.fsmonitor true
 # git config core.untrackedCache true
 # Load GitHub special Pull Request references to origin/pull/*:
-# git config remote.origin.fetch '+refs/pull/*:refs/remotes/origin/pull/*'
+# git config --add remote.origin.fetch '+refs/pull/*:refs/remotes/origin/pull/*'
 
 [user]
     email = me@tanapol.dev
