--- a/starship.toml
+++ b/starship.toml
@@ -157,7 +157,7 @@ disabled = true
 
 [package]
 format = "via [$symbol$version]($style) "
-symbol = " "
+symbol = "📦 "
 style = "bold fg:208"
 
 [nodejs]
@@ -174,6 +174,12 @@ style = "bold fg:64"
 style_user = "bold dimmed fg:#b7bdf8"
 format = "[$user]($style) [@](bold italic) "
 show_always = true
+
+[elixir]
+disabled = true
+
+[docker_context]
+disabled = true
 
 # Solarized color list (prefix with fg:)
 # base03    234
