git: Add signoff just for fun.
Signed-off-by: Tanapol Prucksakorn <me@tanapol.dev>

--- a/.gitconfig
+++ b/.gitconfig
@@ -51,6 +51,9 @@
     textconv = bun
     binary = true
 
+[stgit]
+    autosign = Signed-off-by
+
 [include]
     path = ~/dotfiles/bat/delta-theme.gitconfig
     path = ~/.work/.gitconfig-work
