Add patch-message commands for stacked-git workflow
This commit introduces patch message generation commands for both Claude
and Gemini AI assistants to support stacked-git (stg) workflows. These
new commands complement the existing commit-message commands by enabling
AI-assisted message generation for individual patches in a stack.

Changes:
- claude/commands/patch-message.md: New command that uses 'stg email
  format' to extract patch diffs and generate descriptive messages
- gemini/commands/patch-message.toml: Gemini variant using template
  syntax ({{args}}) for patch arguments
- gemini/commands/commit-message.toml: Fixed command syntax from !{}
  to backticks for consistency with Claude version

Both patch-message commands follow the same structure as their
commit-message counterparts: analyze changes, understand file context,
and generate a brief topic line followed by detailed summary. The key
difference is using 'stg email format' instead of 'git diff --cached'
to work with stacked-git patches.

Signed-off-by: Tanapol Prucksakorn <tanapol.prucksakorn@exwzd.com>

--- a/gemini/commands/patch-message.toml
+++ b/gemini/commands/patch-message.toml
@@ -1,8 +1,8 @@
-description = "Generate a commit message by analyzing staged changes."
+description = "Generate a patch message by analyzing stacked-git patch's changes."
 prompt = """
-# Task: Generate a commit message by analyzing staged changes.
+# Task: Generate a patch message by analyzing stacked-git patch's changes.
 Steps:
-1. Run `git diff --cached` to retrieve all staged changes
+1. Run `stg email format {{args}} -G --stdout | tee` to retrieve all staged changes. Ignore every data about the commit message, only look at the diff that is after `diff --git` line.
 2. Read each modified file in full to understand its purpose and context
 3. Analyze how changes across different files relate to each other
 4. Summarize the overall impact, then provide per-file summaries
