feat: ghostty: add shift+enter keybind for Claude newline
Add keybind mapping shift+enter to send escape sequence followed by carriage return (\x1b\r), enabling newline insertion in Claude interface without submitting the prompt.

Signed-off-by: Tanapol Prucksakorn <tanapol.prucksakorn@exwzd.com>

--- a/ghostty/config
+++ b/ghostty/config
@@ -19,3 +19,6 @@ macos-option-as-alt = true
 # Quick terminal
 keybind = global:cmd+ctrl+t=toggle_quick_terminal
 quick-terminal-size = 40%
+
+# Claude shift+enter newline
+keybind = shift+enter=text:\x1b\r
